update the webinfo

--- a/formevo/frontend/public/manifest.json
+++ b/formevo/frontend/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Formevo",
+  "name": "Building form smoothly",
   "icons": [
     {
       "src": "favicon.ico",
